--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- endbuild -->
 </head>
 
-<body>
+<body class="bg-light">
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -38,21 +38,26 @@
         </ul>
         <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search </button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search </button>
         </form>
     </div>
 </nav>
 
-<main role="main" class="container">
-    <div class="jumbotron text-center">
-        <img src="assets/img/logo.png"/>
-        <h1>Bootstrap 4 Starter Template</h1>
-        <p class="lead">This example is a quick bootstrap starter template.</p>
-        <a class="btn btn-lg btn-primary" href="https://getbootstrap.com/docs/4.1/getting-started/introduction/" role="button" target="_blank">View Bootstrap 4.1 Docs &raquo;</a>
+<main role="main" class="main text-center">
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="jumbotron-heading">Typescript Boilerplate</h1>
+            <p class="lead text-muted">This example is a prebuilt Typescript starter kit</p>
+            <p class="lead text-muted"><b>To get started</b>: After running the command <code>gulp dev</code>, edit a <code>.html</code>, <code>.scss</code>, or a <code>.ts</code> file, the browser will reload automatically.</p>
+            <p>
+                <a href="https://www.typescriptlang.org/docs/home.html" target="_blank" class="btn btn-primary my-2">View Typescript Docs</a>
+                <a href="https://www.typescriptlang.org/play/index.html" target="_blank" class="btn btn-secondary my-2">Typescript Playground</a>
+            </p>
+        </div>
     </div>
-    <div id="app">
 
-    </div>
+    <div id="app"></div>
+
 </main>
 
 <!-- build:js -->
