Gulp optimizations, added Gretting class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Bootstrap Stater</title>
+    <title>Typescript Boilerplate</title>
 
     <!-- Icons for this template -->
     <link href="assets/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -61,7 +61,7 @@
 </main>
 
 <!-- build:js -->
-<script src="assets/js/app.js"></script>
+<script src="app/main.js"></script>
 <!-- endbuild -->
 </body>
 </html>
