Updated markup and styles

--- a/index.html
+++ b/index.html
@@ -1,67 +1,74 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="favicon.ico">
 
-    <title>Typescript Boilerplate</title>
+  <title>Typescript Boilerplate</title>
 
-    <!-- Icons for this template -->
-    <link href="assets/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- Stylesheet -->
-    <!-- build:css -->
-    <link href="assets/css/app.css" rel="stylesheet">
-    <!-- endbuild -->
+  <!-- Icons for this template -->
+  <link href="assets/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- Stylesheet -->
+  <!-- build:css -->
+  <link href="assets/css/app.css" rel="stylesheet">
+  <!-- endbuild -->
 </head>
 
 <body class="bg-light">
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-        <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search </button>
-        </form>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline mt-2 mt-md-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i>
+          Search </button>
+      </form>
     </div>
-</nav>
+  </nav>
 
-<main role="main" class="main text-center">
+  <main role="main" class="main text-center">
     <div class="jumbotron">
-        <div class="container">
-            <h1 class="jumbotron-heading">Typescript Boilerplate</h1>
-            <p class="lead text-muted">This example is a prebuilt Typescript starter kit</p>
-            <p class="lead text-muted"><b>To get started</b>: After running the command <code>gulp dev</code>, edit a <code>.html</code>, <code>.scss</code>, or a <code>.ts</code> file, the browser will reload automatically.</p>
-            <p>
-                <a href="https://www.typescriptlang.org/docs/home.html" target="_blank" class="btn btn-primary my-2">View Typescript Docs</a>
-                <a href="https://www.typescriptlang.org/play/index.html" target="_blank" class="btn btn-secondary my-2">Typescript Playground</a>
-            </p>
-        </div>
+      <div class="container">
+        <h1 class="jumbotron-heading">Typescript Boilerplate</h1>
+        <p class="lead text-muted">This example is a prebuilt Typescript starter kit</p>
+        <p class="lead text-muted"><b>To get started</b>: After running the command <code>gulp dev</code>, edit a <code>.html</code>,
+          <code>.scss</code>, or a <code>.ts</code> file, the browser will reload automatically.</p>
+        <p>
+          <a href="https://www.typescriptlang.org/docs/home.html" target="_blank" class="btn btn-primary my-2">Typescript
+            Docs</a>
+          <a href="https://www.typescriptlang.org/play/index.html" target="_blank" class="btn btn-secondary my-2">Typescript
+            Playground</a>
+        </p>
+      </div>
     </div>
 
     <div id="app"></div>
 
-</main>
+  </main>
 
-<!-- build:js -->
-<script src="app/main.js"></script>
-<!-- endbuild -->
+  <!-- build:js -->
+  <script src="app/main.js"></script>
+  <!-- endbuild -->
 </body>
+
 </html>
