--- a/index.html
+++ b/index.html
@@ -59,9 +59,31 @@
           <a href="https://www.typescriptlang.org/play/index.html" target="_blank" class="btn btn-secondary my-2">Typescript
             Playground</a>
         </p>
+        <h3>Agregar datos</h3>
       </div>
     </div>
-
+    <div id="app text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            
+          </div>
+               
+          <form class="form-inline" autocomplete="off">
+            <label class="sr-only" for="inlineFormInputTecnologia">Tecnologia</label>
+            <input type="text" class="formTecnologia form-control" id="inlineFormInputTecnologia" placeholder="Tecnologia">
+            <label class="sr-only" for="inlineFormInputDescripcion">Descripcion</label>
+            <input type="text" class="formDescripcion form-control" id="inlineFormInputDescripcion" placeholder="Descripcion">
+            <label class="sr-only" for="inlineFormInputurl">Url</label>
+            <input type="text" class="formUrl form-control" id="inlineFormInputurl" placeholder="Url"> 
+           <!---<button  type="submit" class="btn btn-primary mb-2" onclick="agregar()">Submit</button>-->
+            <input id = "btnAdd" class="btn btn-primary  form-control" value="Agregar">
+            <br>
+          </form>
+        </div>
+      </div>
+    </div>
+    <br>
     <div id="app text-center">
       <div class="container">
         <div class="row">
