Aqui los ejercicios de typescript

--- a/index.html
+++ b/index.html
@@ -62,8 +62,25 @@
       </div>
     </div>
 
+
+
+    
+    <div class="row">
+        <div class="col-12">
+          <form class="form-inline">
+            <input type="text" placeholder="Write Framework..." class="js-new_fw form-control">
+            <input type="text" placeholder="Write description..." class="js-new_desc form-control">
+            <input type="text" placeholder="Write URL..." class="js-new_url form-control">
+            <input type="button" value="Add" class="js-add btn btn-primary">
+          </form>
+        </div>
+      </div>
+
+
+
     <div id="app text-center">
       <div class="container">
+        
         <div class="row">
           <div class="col-6">
             <div class="list-group" id="list-tab" role="tablist">
