--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
     </div>
 
     <div id="app text-center">
-      <div class="container">
+      <div class="container mb-5">
+          <form id="new-frameworkjs" class="row">
+              <div class="form-group col-3">
+                <label for="name">Nombre</label>
+                <input type="text" class="form-control" id="name" value="name" placeholder="Nombre" required>
+              </div>
+              <div class="form-group col-3">
+                <label for="description">Descripción</label>
+                <input type="text" class="form-control" id="description" value="description" placeholder="descripción" required>
+              </div>
+              <div class="form-group col-3">
+                <label for="url">URL</label>
+                <input type="text" class="form-control" id="url" placeholder="URL" value="url" required>
+              </div>
+              <div class="col-1">
+              </div>
+                  <input type="button" value="form" id="coolbutton" onclick="save()" class="btn btn-primary disabled"></input>
+            </form>
         <div class="row">
           <div class="col-6">
             <div class="list-group" id="list-tab" role="tablist">
