--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <input type="text" class="form-control prueba3" placeholder="Url" value="">
                 </div>
               <div class="col-3"> 
-                <input class="btn btn-primary btnadd disabled" type="button" onclick="prueba()" value="Añadir">
+                <input class="btn btn-primary btnadd disabled" type="button" onclick="prueba()" value="Añadir" disabled>
               </div>
             </div>
           </form>
