--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            
-          </div>
-               
+          </div>  
           <form class="form-inline" autocomplete="off">
             <label class="sr-only" for="inlineFormInputTecnologia">Tecnologia</label>
             <input type="text" class="formTecnologia form-control" id="inlineFormInputTecnologia" placeholder="Tecnologia">
@@ -77,13 +75,13 @@
             <label class="sr-only" for="inlineFormInputurl">Url</label>
             <input type="text" class="formUrl form-control" id="inlineFormInputurl" placeholder="Url"> 
            <!---<button  type="submit" class="btn btn-primary mb-2" onclick="agregar()">Submit</button>-->
-            <input id = "btnAdd" class="btn btn-primary  form-control" value="Agregar">
+            <input  type ="button" id = "btnAdd" class="btn btn-primary  form-control" value="+">
             <br>
           </form>
         </div>
       </div>
     </div>
-    <br>
+    <br>  
     <div id="app text-center">
       <div class="container">
         <div class="row">
