--- a/index.html
+++ b/index.html
@@ -63,17 +63,28 @@
     </div>
 
 
-      <label class="sr-only" for="inlineFormInputName2">Name</label>
-      <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Name">
-      <label class="sr-only" for="inlineFormInputDescription2">Description</label>
-      <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputDescription2" placeholder="Description">
-      <label class="sr-only" for="inlineFormInputURL2">URL</label>
-      <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputURL2" placeholder="URL">    
-      <button id="addBtn" class="btn btn-primary mb-2 add-btn">+</button>
-
-
     <div id="app text-center">
       <div class="container">
+
+        <div class="row">
+          <div class="col-3">
+            <label class="sr-only" for="inlineFormInputName2">Name</label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Name">
+          </div>
+          <div class="col-3">
+            <label class="sr-only" for="inlineFormInputDescription2">Description</label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputDescription2" placeholder="Description">
+          </div>
+          <div class="col-3">  
+            <label class="sr-only" for="inlineFormInputURL2">URL</label>       
+            <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputURL2" placeholder="URL"> 
+          </div>   
+          <div class="col-3">
+            <button id="addBtn" class="btn btn-primary mb-2 add-btn" disabled>+</button> 
+          </div>
+        </div>  
+
+
         <div class="row">
           <div class="col-6">
             <div class="list-group" id="list-tab" role="tablist">
