fix merge coments

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
           <form id="new-frameworkjs" class="row">
               <div class="form-group col-3">
                 <label for="newName">Nombre</label>
-                <input type="text" class="form-control" id="newName" value="" placeholder="Nombre" required>
+                <input type="text" class="form-control" id="new-name" value="" placeholder="Nombre" required>
               </div>
               <div class="form-group col-3">
                 <label for="newDescription">Descripción</label>
-                <input type="text" class="form-control" id="newDescription" value="" placeholder="descripción" required>
+                <input type="text" class="form-control" id="new-description" value="" placeholder="descripción" required>
               </div>
               <div class="form-group col-3">
                 <label for="newUrl">URL</label>
-                <input type="text" class="form-control" id="newUrl" placeholder="URL" value="" required>
+                <input type="text" class="form-control" id="new-url" placeholder="URL" value="" required>
               </div>
               <div class="col-1">
               </div>
